Thu Sep 18 10:17:49 CET 2008    Frediano Ziglio <freddy77_A_gmail_D_com>
	* src/tds/token.c: reduce use of #if

Wed Sep 17 13:25:51 CET 2008    Frediano Ziglio <freddy77_A_gmail_D_com>
	* src/odbc/odbc.c: typo error

Wed Sep 17 14:14:15 CET 2008    Frediano Ziglio <freddy77_A_gmail_D_com>
	* src/tds/.cvsignore src/tds/Makefile.am src/tds/convert.c:
	* src/tds/data.c src/tds/read.c src/tds/types.pl(added):
	- autogenerate some functions based on types.txt

Sun Sep 14 09:44:55 CET 2008    Frediano Ziglio <freddy77_A_gmail_D_com>
	* include/tds.h src/odbc/odbc.c src/tds/mem.c src/tds/token.c:
	- renamed TDSSOCKET->no_data_conv to TDSSOCKET->use_iconv

Sat Sep 13 09:18:17 CET 2008    Frediano Ziglio <freddy77_A_gmail_D_com>
	* src/tds/token.c: fix compile if no --enable-development

Fri Sep 12 17:05:54 CET 2008    Frediano Ziglio <freddy77_A_gmail_D_com>
	* include/tds.h src/tds/config.c src/tds/token.c:
	- removed is_binary_type macro, not used anymore
	- removed broken_money setting, not used
	- added no_data_conv to disable data conversions
	* src/odbc/odbc.c src/odbc/unittests/data.c:
	- updated to support no_data_conv

Thu Sep 11 17:07:10 CET 2008    Frediano Ziglio <freddy77_A_gmail_D_com>
	* include/tdsodbc.h src/odbc/convert_tds2sql.c src/odbc/odbc.c:
	* src/odbc/odbc_util.c src/odbc/prepare_query.c src/odbc/sql2tds.c:
	- renamed sql2tds -> odbc_sql2tds and convert_tds2sql -> odbc_tds2sql

Wed Sep 10 13:36:48 CET 2008    Frediano Ziglio <freddy77_A_gmail_D_com>
	* src/odbc/odbc.c src/odbc/sql2tds.c:
	- avoid useless buffer allocations

Wed Sep 10 13:19:53 CET 2008    Frediano Ziglio <freddy77_A_gmail_D_com>
	* include/tdsodbc.h src/odbc/odbc.c src/odbc/odbc_util.c:
	* src/odbc/prepare_query.c src/odbc/sql2tds.c:
	- move odbc_convert_err_set in odbc_util and reuse it
	- improve sql2tds error handling

Tue Sep 09 16:53:54 CET 2008    Frediano Ziglio <freddy77_A_gmail_D_com>
	* src/odbc/sql2tds.c: be coherent about constants
