@@ -1,3 +1,8 @@
+Thu Sep 18 10:50:48 CET 2008    Frediano Ziglio <freddy77_A_gmail_D_com>
+	* include/tdsodbc.h src/odbc/convert_tds2sql.c src/odbc/odbc.c:
+	* src/odbc/odbc_util.c:
+	- more error set in odbc_tds2sql
+
 Thu Sep 18 10:17:49 CET 2008    Frediano Ziglio <freddy77_A_gmail_D_com>
 	* src/tds/token.c: reduce use of #if
 
@@ -664,4 +669,4 @@ Wed Jan  9 19:54:43 EST 2008	JK Lowden <jklowden@freetds.org>
 	* ChangeLog  truncated because of release
 	* ChangeLog-0.82 added because of release
 	
-$Id: ChangeLog,v 1.2612 2008-09-18 08:17:59 freddy77 Exp $
+$Id: ChangeLog,v 1.2613 2008-09-18 08:51:19 freddy77 Exp $
